--- a/stack.yaml
+++ b/stack.yaml
@@ -17,7 +17,7 @@
 #
 # resolver: ./custom-snapshot.yaml
 # resolver: https://example.com/snapshots/2018-01-01.yaml
-resolver: lts-17.6
+resolver: lts-13.26
 
 # User packages to be built.
 # Various formats can be used as shown in the example below.
@@ -41,9 +41,11 @@ packages:
 #
 #  
 extra-deps:
-- Chart-diagrams-1.9.3@sha256:1535d5d0d3febca63138cecfde234315212611c21bb7f4358b2dae8c55c59003,1801
-- debug-0.1.1@sha256:fd49dd02183e05848fd701d9894e440abd6a1a0eef0722246ced985d6a05265d,2394
-- gamma-0.10.0.0@sha256:0d666fc486899a2e22f44aec1aa32c168e0803e6c2ddb266a18a07700ca5d95b,2051
+- gamma-0.10.0.0
+- continued-fractions-0.10.0.2
+- converge-0.1.0.1
+- math-functions-0.3.4.1
+
 
 # Override default flag values for local packages and extra-deps
 # flags: {}
