--- a/package.yaml
+++ b/package.yaml
@@ -74,5 +74,15 @@ executables:
     - -main-is Clustering
     dependencies:
     - lazyppl
+  programinduction-exe:
+    main:                ProgramInduction.hs
+    source-dirs:         src
+    ghc-options:
+    - -threaded
+    - -rtsopts
+    - -with-rtsopts=-N
+    - -main-is ProgramInduction
+    dependencies:
+    - lazyppl
 
 
