--- a/package.yaml
+++ b/package.yaml
@@ -39,11 +39,22 @@ dependencies:
 - monad-extras
 - lazyio
 - spoon
+- Histogram
 
 library:
   source-dirs: src
 
 executables:
+  ibp-exe:
+    main:                IBP.hs
+    source-dirs:         src
+    ghc-options:
+    - -threaded
+    - -rtsopts
+    - -with-rtsopts=-N
+    - -main-is IBP
+    dependencies:
+    - lazyppl
   wiener-exe:
     main:                Wiener.hs
     source-dirs:         src
