--- a/package.yaml
+++ b/package.yaml
@@ -109,5 +109,14 @@ executables:
     - -main-is ProgramInduction
     dependencies:
     - lazyppl
-
+  mondrian-exe:
+    main:                Distr/Mondrian.hs
+    source-dirs:         src
+    ghc-options:
+    - -threaded
+    - -rtsopts
+    - -with-rtsopts=-N
+    - -main-is Distr.Mondrian
+    dependencies:
+    - lazyppl
 
