--- a/package.yaml
+++ b/package.yaml
@@ -60,13 +60,13 @@ executables:
     dependencies:
     - lazyppl
   ibp-exe:
-    main:                IBP.hs
+    main:                AdditiveClustering.hs
     source-dirs:         src
     ghc-options:
     - -threaded
     - -rtsopts
     - -with-rtsopts=-N
-    - -main-is IBP
+    - -main-is AdditiveClustering
     dependencies:
     - lazyppl
   wiener-exe:
