--- a/package.yaml
+++ b/package.yaml
@@ -110,7 +110,7 @@ executables:
     dependencies:
     - lazyppl
   mondrian-exe:
-    main:                Distr/Mondrian.hs
+    main:                MondrianExample.hs
     source-dirs:         src
     ghc-options:
     - -threaded
