--- a/package.yaml
+++ b/package.yaml
@@ -117,7 +117,7 @@ executables:
     - -threaded
     - -rtsopts
     - -with-rtsopts=-N
-    - -main-is Distr.Mondrian
+    - -main-is MondrianExample
     dependencies:
     - lazyppl
 
