--- a/package.yaml
+++ b/package.yaml
@@ -44,6 +44,8 @@ dependencies:
 - monad-loops
 - matplotlib
 - deepseq
+- aeson
+- bytestring
 
 library:
   source-dirs: src
@@ -118,6 +120,16 @@ executables:
     - -rtsopts
     - -with-rtsopts=-N
     - -main-is MondrianExample
+    dependencies:
+    - lazyppl
+  codedmessage-exe:
+    main:                CodedMessage.hs
+    source-dirs:         src
+    ghc-options:
+    - -threaded
+    - -rtsopts
+    - -with-rtsopts=-N
+    - -main-is CodedMessage
     dependencies:
     - lazyppl
 
