--- a/stack.yaml
+++ b/stack.yaml
@@ -17,7 +17,7 @@
 #
 # resolver: ./custom-snapshot.yaml
 # resolver: https://example.com/snapshots/2018-01-01.yaml
-resolver: lts-18.27
+resolver: lts-20.16
 
 # User packages to be built.
 # Various formats can be used as shown in the example below.
@@ -47,7 +47,8 @@ extra-deps:
 - math-functions-0.3.4.2
 - Histogram-0.1.0.2
 - matplotlib-0.7.5
-
+- normaldistribution-1.1.0.3
+- random-1.2.1.1
 
 # Override default flag values for local packages and extra-deps
 # flags: {}
