--- a/.github/workflows/website.yml
+++ b/.github/workflows/website.yml
@@ -14,11 +14,13 @@ jobs:
       uses: actions/checkout@v2
 
     - uses: nikeee/setup-pandoc@v1
-    #   with:
-    #     pandoc-version: '2.19.2'
 
     - name: Generate website
       run: bash generate_website.sh
+
+    - name: Check the generated website
+      run: |
+        ls -R website
 
     - name: Push to website repository
       run: |
@@ -28,5 +30,5 @@ jobs:
         cp -r website/* lazyppl-team.github.io/
         cd lazyppl-team.github.io
         git add .
-        git commit -m "Update website from $GITHUB_SHA in $GITHUB_REPOSITORY (github action: $GITHUB_ACTION)"
+        git diff-index --quiet HEAD || git commit -m "Update website from $GITHUB_SHA in $GITHUB_REPOSITORY (github action: $GITHUB_ACTION)"
         git push
