--- a/package.yaml
+++ b/package.yaml
@@ -26,17 +26,17 @@ github: lazyppl-team/lazyppl
 dependencies:
 - base >= 4.7 && < 5
 - random >= 1.2.0 && < 1.3 
-- statistics >= 0.15.2 && < 0.16 # 0.16 should be ok
 - log-domain >=0.13.2 && < 0.14
-- mtl >= 2.2.2 && < 2.3 # Could try 2.3
-- transformers >= 0.5.6.2 && < 0.6 # 0.6 might be ok
+- mtl >= 2.2.2 && < 2.4 
+- transformers >= 0.5.6.2 && < 0.7 
 - monad-extras >= 0.6.0 && < 0.7 
 - containers >= 0.6.5.1 && < 0.7 # 0.7 looks ok
+- math-functions >= 0.3.4.2
 # for GP 
 - hmatrix >= 0.20.2 && < 0.21
 # for SingleSite 
 - deepseq >= 1.4.4.0 && < 1.5
-- ghc-heap >= 8.10.7 && < 8.11 
+- ghc-heap >= 8.10.7 && < 8.11
 # for exe's
 - array
 - vector
