--- a/package.yaml
+++ b/package.yaml
@@ -132,3 +132,13 @@ executables:
     - -main-is TestMala
     dependencies:
     - lazyppl
+  testhmc-exe:
+    main:                TestHMC.hs
+    source-dirs:         src
+    ghc-options:
+    - -threaded
+    - -rtsopts
+    - -with-rtsopts=-N
+    - -main-is TestHMC
+    dependencies:
+    - lazyppl
