--- a/package.yaml
+++ b/package.yaml
@@ -62,3 +62,14 @@ executables:
     - -main-is TestTorus
     dependencies:
     - lazyppl
+
+  testhmc-exe:
+    main:                TestTorusHMC.hs
+    source-dirs:         src
+    ghc-options:
+    - -threaded
+    - -rtsopts
+    - -with-rtsopts=-N
+    - -main-is TestTorusHMC
+    dependencies:
+    - lazyppl
