--- a/package.yaml
+++ b/package.yaml
@@ -26,6 +26,7 @@ dependencies:
 - vector
 - random
 - statistics
+- math-functions >= 0.3.4.2
 - bytestring
 - cassava
 - gamma
@@ -164,5 +165,38 @@ executables:
     - -rtsopts
     - -with-rtsopts=-N
     - -main-is GaussianMixture
+    dependencies:
+    - lazyppl
+
+  walk-exe:
+    main:                Walk.hs
+    source-dirs:         src
+    ghc-options:
+    - -threaded
+    - -rtsopts
+    - -with-rtsopts=-N
+    - -main-is Walk
+    dependencies:
+    - lazyppl
+
+  geometric-exe:
+    main:                Geometric.hs
+    source-dirs:         src
+    ghc-options:
+    - -threaded
+    - -rtsopts
+    - -with-rtsopts=-N
+    - -main-is Geometric
+    dependencies:
+    - lazyppl
+
+  simplemix-exe:
+    main:                SimpleMix.hs
+    source-dirs:         src
+    ghc-options:
+    - -threaded
+    - -rtsopts
+    - -with-rtsopts=-N
+    - -main-is SimpleMix
     dependencies:
     - lazyppl
