--- a/package.yaml
+++ b/package.yaml
@@ -167,6 +167,17 @@ executables:
     - -main-is GaussianMixture
     dependencies:
     - lazyppl
+  
+  gaussianmixturedcc-exe:
+    main:                GaussianMixtureDCC.hs
+    source-dirs:         src
+    ghc-options:
+    - -threaded
+    - -rtsopts
+    - -with-rtsopts=-N
+    - -main-is GaussianMixtureDCC
+    dependencies:
+    - lazyppl
 
   walk-exe:
     main:                Walk.hs
